# ubdcc-dashboard

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  TASKS.md  llms.txt  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build_wheels.yml  codeql.yml  gh_release.yml  unit-tests.yml
dev/: set_version.py  set_version_config.yml
dev/pypi/: create_wheel.sh  install_packaging_tools.sh  remove_files.sh  upload_wheel.sh
dev/sphinx/: Makefile  create_docs.sh  install_sphinx.sh  make.bat
dev/sphinx/source/: changelog.md  conf.py  contributing.md  index.rst  license.rst  readme.md  security.md
docs/: .buildinfo  changelog.html  code_of_conduct.html  contributing.html  genindex.html  index.html  license.html  objects.inv  readme.html  search.html  searchindex.js  security.html
docs/_sources/: changelog.md.txt  readme.md.txt
ubdcc_dashboard/: __init__.py  cli.py  server.py
ubdcc_dashboard/static/: index.html
